--- a/MDK-ARM/lab3/lab3.build_log.htm
+++ b/MDK-ARM/lab3/lab3.build_log.htm
@@ -27,6 +27,10 @@ Project File Date:  12/16/2023
 <h2>Output:</h2>
 *** Using Compiler 'V6.19', folder: 'C:\Keil_v5\ARM\ARMCLANG\Bin'
 Build target 'lab3'
+compiling stm32l1xx_it.c...
+linking...
+Program Size: Code=5350 RO-data=302 RW-data=16 ZI-data=1704  
+FromELF: creating hex file...
 "lab3\lab3.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
@@ -51,7 +55,7 @@ Package Vendor: Keil
 
    * Component: ARM::CMSIS:CORE:5.6.0
       Include file:  CMSIS/Core/Include/tz_context.h
-Build Time Elapsed:  00:00:00
+Build Time Elapsed:  00:00:01
 </pre>
 </body>
 </html>
