--- a/MDK-ARM/lab3/lab3.build_log.htm
+++ b/MDK-ARM/lab3/lab3.build_log.htm
@@ -27,9 +27,9 @@ Project File Date:  12/16/2023
 <h2>Output:</h2>
 *** Using Compiler 'V6.19', folder: 'C:\Keil_v5\ARM\ARMCLANG\Bin'
 Build target 'lab3'
-compiling stm32l1xx_it.c...
+compiling main.c...
 linking...
-Program Size: Code=5350 RO-data=302 RW-data=16 ZI-data=1704  
+Program Size: Code=6748 RO-data=304 RW-data=12 ZI-data=1796  
 FromELF: creating hex file...
 "lab3\lab3.axf" - 0 Error(s), 0 Warning(s).
 
